test/tests/stages/17_supporting_dynamic_memory_allocation/valid/sizeof/sizeof_array.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: sizeof_adjusted_param
        List[1]: 
          TIdentifier: arr
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CSizeOf: 
                  CVar: 
                    TIdentifier: arr
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Array: 
              TLong: 3
              Int: 
          ULong: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[7]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: arr
                  None: 
                  Array: 
                    TLong: 3
                    Int: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CSizeOf: 
                    CVar: 
                      TIdentifier: arr
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 12
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: nested_arr
                  None: 
                  Array: 
                    TLong: 4
                    Array: 
                      TLong: 5
                      Long: 
                  CStatic: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CSizeOf: 
                    CSubscript: 
                      CVar: 
                        TIdentifier: nested_arr
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 2
                        None: 
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 40
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CSizeOf: 
                    CString: 
                      CStringLiteral: 
                        List[13]: 
                          TChar: 72
                          TChar: 101
                          TChar: 108
                          TChar: 108
                          TChar: 111
                          TChar: 44
                          TChar: 32
                          TChar: 87
                          TChar: 111
                          TChar: 114
                          TChar: 108
                          TChar: 100
                          TChar: 33
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 14
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 3
                            None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CFunctionCall: 
                    TIdentifier: sizeof_adjusted_param
                    List[1]: 
                      CVar: 
                        TIdentifier: arr
                        None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 8
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 4
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
